--- a/AnsibleWorkShop/roles/infra-kube-resources/templates/Dex/resource_RBAC.yaml.j2
+++ b/AnsibleWorkShop/roles/infra-kube-resources/templates/Dex/resource_RBAC.yaml.j2
@@ -4,7 +4,7 @@ metadata:
   name: dex-local-admin
 subjects:
 - kind: User
-  name: {{ user }}
+  name: {{ dex_staticUser }}
   apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: ClusterRole
