add podman config process

--- a/AnsibleWorkShop/roles/ansible-podman-rootless-provision/templates/podman-rootless-socket.confd.j2
+++ b/AnsibleWorkShop/roles/ansible-podman-rootless-provision/templates/podman-rootless-socket.confd.j2
@@ -1,4 +1,5 @@
-#!/sbin/openrc-run
+# Configuration for /etc/init.d/podman-rootless-{{ target_user}}
+# https://gitlab.alpinelinux.org/alpine/aports/-/blob/master/community/podman/podman.confd
 
 # See podman-system-service(1) for service description
 # and available options.
