--- a/KubeWorkShop/Traefik/aio-traefik.yaml.j2
+++ b/KubeWorkShop/Traefik/aio-traefik.yaml.j2
@@ -1,4 +1,16 @@
 apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: traefik
+spec:
+  resources:
+    requests:
+      storage: 10Gi
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteOnce
+---
+apiVersion: v1
 kind: ConfigMap
 metadata:
   name: traefik
@@ -20,7 +32,6 @@ data:
       checkNewVersion: false
       sendAnonymousUsage: false
 
-
     ## Routing & Load Balancing
     # https://doc.traefik.io/traefik/routing/overview/
     entryPoints:
@@ -28,27 +39,59 @@ data:
       # https://doc.traefik.io/traefik/routing/routers/#configuration-example
       web:
         address: ":80"
-        http:
-          redirections:
-            entryPoint:
-              to: websecure
-              scheme: https
+        # https://doc.traefik.io/traefik/routing/entrypoints/#forwarded-headers
+        forwardedHeaders:
+          trustedIPs:
+            - "0.0.0.0/0"
+      # https://community.traefik.io/t/lets-encrypt-x509-certificate-signed-by-unknown-authority/11112/1
       websecure:
         address: ":443"
+        # https://doc.traefik.io/traefik/routing/entrypoints/#forwarded-headers
+        # https://www.bboy.app/2020/04/16/traefik%E5%90%8E%E7%AB%AF%E5%BA%94%E7%94%A8%E8%8E%B7%E5%8F%96%E7%94%A8%E6%88%B7%E7%9C%9F%E5%AE%9Eip/
+        forwardedHeaders:
+          trustedIPs:
+            - "0.0.0.0/0"
 
     # https://doc.traefik.io/traefik/routing/overview/#transport-configuration
     serversTransport:
-      # https://doc.traefik.io/traefik/routing/overview/#rootcas
-      rootCAs:
-        - /etc/traefik/root_ca.crt
-
+    #   # https://doc.traefik.io/traefik/routing/overview/#rootcas
+    #   rootCAs:
+    #     - /etc/traefik/root_ca.crt
 
     ## Operations
     # https://doc.traefik.io/traefik/operations/api/
     api:
       dashboard: true
-  ca.crt: |
-    {{ CA_Cert.json.result.result.certificate | indent(width=4) }}
+
+    # https://smallstep.com/docs/tutorials/acme-protocol-acme-clients#traefik
+    # https://doc.traefik.io/traefik/https/acme/#certificate-resolvers
+    certificatesResolvers:
+      acmeResolver:
+        acme:
+          caServer: {{ Traefik_ACME_URL | default('https://acme-v02.api.letsencrypt.org/directory') }}
+          email: {{ Traefik_ACME_email | default('')}}
+          storage: /mnt/acmeStorage/acme.json
+          httpChallenge:
+            # used during the challenge
+            entryPoint: web
+            
+    # https://doc.traefik.io/traefik/observability/logs/
+    log:
+      level: DEBUG
+  shared.yml: |
+    # Dynamic Configuration
+    http:
+      middlewares:
+        toHttps:
+          redirectScheme:
+            scheme: https
+            permanent: true
+
+{% if Root_CA_Cert is defined and Root_CA_Cert|length %}
+  root_ca.crt: |
+    {{ Root_CA_Cert | indent(width=4) | default('') }}
+{% endif %}
+
 ---
 apiVersion: v1
 kind: Pod
@@ -61,7 +104,7 @@ spec:
   # https://www.traefik.org/page/Docker#traefik_server_containers
   containers:
     - name: traefik
-      image: docker.io/library/traefik:latest
+      image: {{ Traefik_container_image }}
       imagePullPolicy: IfNotPresent
       resources:
         limits:
@@ -71,33 +114,67 @@ spec:
         # https://doc.traefik.io/traefik/getting-started/install-traefik/#use-the-official-docker-image
         - name: http
           containerPort: 80
-          hostIP: 192.168.255.32
+          hostIP: {{ Traefik_container_hostIP }}
           hostPort: 80
         - name: https
           containerPort: 443
-          hostIP: 192.168.255.32
+          hostIP: {{ Traefik_container_hostIP }}
           hostPort: 443
       env:
-        - name: TZ
-          value: Asia/Shanghai
-        # https://smallstep.com/docs/tutorials/acme-protocol-acme-clients#traefik
+        # https://smallstep.com/docs/tutorials/acme-protocol-acme-clients/index.html#traefik
+{% if Root_CA_Cert is defined and Root_CA_Cert|length %}
         - name: LEGO_CA_CERTIFICATES
-          value: /etc/traefik/ca.crt
+          value: /etc/traefik/root_ca.crt
+{% endif %}
+        # https://community.traefik.io/t/lets-encrypt-x509-certificate-signed-by-unknown-authority/11112/15
+        # https://github.com/go-acme/lego/blob/bc4b57accc090b9c61bde051c99fcb14e952f6e6/lego/client_config.go#L18-L28
+        - name: LEGO_CA_SYSTEM_CERT_POOL
+          value: "true"
       volumeMounts:
         # https://doc.traefik.io/traefik/getting-started/configuration-overview/#configuration-file
-        - name: traefik
-          mountPath: /etc/traefik/ #traefik.yml
-          # subPath: traefik.yml
+        - name: traefik.yml
+          mountPath: /etc/traefik/traefik.yml
+          subPath: traefik.yml
+        - name: shared.yml
+          mountPath: /etc/traefik/dynamic/shared.yml
+          subPath: shared.yml
+{% if Root_CA_Cert is defined and Root_CA_Cert|length %}
+        - name: root_ca.crt
+          mountPath: /etc/traefik/root_ca.crt
+          subPath: root_ca.crt
+{% endif %}
+        - name: fileProvider
+          mountPath: /etc/traefik/dynamic/
+        - name: acmeStorage
+          mountPath: /mnt/acmeStorage
   volumes:
-    # - name: traefik
-    #   # https://kubernetes.io/docs/concepts/storage/volumes/#configmap
-    #   configMap:
-    #     name: traefik
-    #     items:
-    #       - key: traefik.yml
-    #         path: traefik.yml
-    - name: traefik
+    - name: traefik.yml
+      # https://kubernetes.io/docs/concepts/storage/volumes/#configmap
+      configMap:
+        name: traefik
+        items:
+          - key: traefik.yml
+            path: traefik.yml
+    - name: shared.yml
+      # https://kubernetes.io/docs/concepts/storage/volumes/#configmap
+      configMap:
+        name: traefik
+        items:
+          - key: shared.yml
+            path: shared.yml
+{% if Root_CA_Cert is defined and Root_CA_Cert|length %}
+    - name: root_ca.crt
+      configMap:
+        name: traefik
+        items:
+          - key: root_ca.crt
+            path: root_ca.crt
+{% endif %}
+    - name: fileProvider
       hostPath:
-        path: /home/vagrant/infra/traefik/
+        path: /home/{{ ansible_user }}/traefik/
         type: Directory
+    - name: acmeStorage
+      persistentVolumeClaim:
+        claimName: traefik
   restartPolicy: Never
