--- a/KubeWorkShop/Traefik/conf/dynamic/traefik-dashboard.yaml.j2
+++ b/KubeWorkShop/Traefik/conf/dynamic/traefik-dashboard.yaml.j2
@@ -2,7 +2,7 @@
 http:
   routers:
     dashboard:
-      rule: Host(`{{ Traefik_subdomain }}.{{ base_domain_name }}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
+      rule: Host(`{{ Traefik.ingress.dashboard_subdomain }}.{{ base_domain_name }}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
       service: api@internal
       # https://www.teanote.pub/archives/247
       # https://doc.traefik.io/traefik/routing/routers/#tls
@@ -14,7 +14,7 @@ http:
         - toHttps@file
         - userpass
       tls:
-{% if Traefik_ACME_enabled is defined and Traefik_ACME_enabled is sameas true -%}
+{% if Traefik.app.ACME_enabled is defined and Traefik.app.ACME_enabled is sameas true %}
         certResolver: acmeResolver
 {% else %}
         {}
@@ -23,4 +23,4 @@ http:
     userpass:
       basicAuth:
         users:
-          - admin:$apr1$/F5ai.wT$7nFJWh4F7ZA0qoY.JZ69l1
+          - {{ Traefik.ingress.dashboard_basicAuth }}
