--- a/KubeWorkShop/Traefik/conf/dynamic/traefik-dashboard.yaml.j2
+++ b/KubeWorkShop/Traefik/conf/dynamic/traefik-dashboard.yaml.j2
@@ -2,7 +2,7 @@
 http:
   routers:
     dashboard:
-      rule: Host(`{{ Traefik.ingress.dashboard_subdomain }}.{{ base_domain_name }}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
+      rule: Host(`{{ Traefik.ingress.dashboard_subdomain }}.{{ Traefik.ingress.dashboard_basedomain }}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
       service: api@internal
       # https://www.teanote.pub/archives/247
       # https://doc.traefik.io/traefik/routing/routers/#tls
