rename stateca pvc volume

--- a/KubeWorkShop/StepCA/aio-stepca.yaml.j2
+++ b/KubeWorkShop/StepCA/aio-stepca.yaml.j2
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: stepca
+  name: stepca-pvc
 spec:
   resources:
     requests:
@@ -60,4 +60,4 @@ spec:
   volumes:
     - name: stepca
       persistentVolumeClaim:
-        claimName: stepca
+        claimName: stepca-pvc
