update consul service config

--- a/KubeWorkShop/Traefik/consul-traefik.hcl.j2
+++ b/KubeWorkShop/Traefik/consul-traefik.hcl.j2
@@ -1,7 +1,17 @@
 service {
   id = "dev-traefik"
   name = "dev-traefik"
-  port = 443
+  address = "dev-traefik.service.consul"
+
+  tags = [
+    "traefik.enable=true",
+    "traefik.http.routers.dev-traefik.entryPoints: websecure",
+    "traefik.http.routers.dev-traefik.middlewares: tohttps@docker",
+    "traefik.http.routers.dev-traefik.rule=Host(`dev-traefik.infra.sololab`)",
+    "traefik.http.routers.dev-traefik.tls.certresolver: internal",
+    "traefik.http.services.dev-traefik.loadbalancer.server.scheme=https",
+    "traefik.http.services.dev-traefik.loadbalancer.server.port=443"
+  ]
 
   checks = [
     {
